--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
-  <script type="text/javascript" src="/dist/bundle.js"></script>
+  <script type="text/javascript" src="./dist/bundle.js"></script>
 </body>
 </html>
 
